# routes/users.js
@@ -1,4 +1,4 @@
-var { addUsers } = require('../services/user_services');
+var { addUsers,loginUser } = require('../services/user_services');
 var express = require('express');
 var router = express.Router();
 
@@ -9,9 +9,21 @@ router.get('/', function(req, res, next) {
 
 router.post('/register',async function(req,res) {
   const data = req.body
-  response = await addUsers(data)
+  var response = await addUsers(data)
   if(response.status == 400)
     res.statusCode = 400
+  res.send({
+    "data":{
+      response
+    }
+  })
+})
+
+router.post('/login',async function(req,res) {
+  const data = req.body
+  var response = await loginUser(data)
+  if(response.status ==404)
+    res.statusCode = 404
   res.send({
     "data":{
       response
