# services/user_services.js
@@ -1,8 +1,8 @@
 var generator = require('generate-password')
 var bcrypt = require("bcryptjs")
 const { Connection } = require("../database/connection");
-Connection.open() 
 async function addUsers(data) {
+    Connection.open() 
     const {email,phono} = data
     const findUser = await Connection.db.db("SampleApplication").collection("users").findOne({email:email})
     if(!findUser){
@@ -31,4 +31,26 @@ async function addUsers(data) {
         }
     }
 }
-module.exports = {addUsers}
+
+async function loginUser(data) {
+    Connection.open() 
+    const {email,password}=data
+    const findUser = await Connection.db.db("SampleApplication").collection("users").findOne({email:email})
+    if(findUser){
+        console.log("here")
+        var isCorrectPassword = await bcrypt.compare(password,findUser.password)
+        if(isCorrectPassword)
+        {
+            return {
+                status:200,
+                "login":true
+            }
+        }
+    }
+    return {
+        status: 404,
+        "error":"Please Check username or password"
+    }
+}
+
+module.exports = {addUsers,loginUser}
